force-app/main/default/objects/vlocity_ins__InsuranceClaimRecovery__c/vlocity_ins__InsuranceClaimRecovery__c.object-meta.xml
<CustomObject>
    <description>Represents a recovery of funds on an insurance claim through subrogation and salvage activities. Recovered amounts may come from a salvage company or through legal litigation or arbitration. Master-detail child object of Claim.</description>
    <label>Claim Recovery</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Recovery</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>