force-app/main/default/objects/vlocity_ins__InsuranceClaimRecovery__c/fields/vlocity_ins__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>